qt/webkit/gen_qgraphicswebview.h

class QAction;
class QEvent;
class QGraphicsItem;
class QGraphicsWebView;
class QIcon;
class QMetaObject;
class QNetworkRequest;
class QPainter;
class QRectF;
class QSizeF;
class QStyleOptionGraphicsItem;
class QUrl;
class QVariant;
class QWebHistory;
class QWebPage;
class QWebSettings;
class QWidget;
typedef struct QAction QAction;
typedef struct QEvent QEvent;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsWebView QGraphicsWebView;
typedef struct QIcon QIcon;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkRequest QNetworkRequest;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QSizeF QSizeF;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWebHistory QWebHistory;
typedef struct QWebPage QWebPage;
typedef struct QWebSettings QWebSettings;
typedef struct QWidget QWidget;
bool QGraphicsWebView_override_virtual_connectNotify(void* self, intptr_t slot);
bool QGraphicsWebView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
bool QGraphicsWebView_override_virtual_advance(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_advance(void* self, int phase);
bool QGraphicsWebView_override_virtual_contains(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_contains(const void* self, QPointF* point);
bool QGraphicsWebView_override_virtual_collidesWithItem(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_collidesWithItem(const void* self, QGraphicsItem* other, int mode);
bool QGraphicsWebView_override_virtual_collidesWithPath(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_collidesWithPath(const void* self, QPainterPath* path, int mode);
bool QGraphicsWebView_override_virtual_isObscuredBy(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_isObscuredBy(const void* self, QGraphicsItem* item);
bool QGraphicsWebView_override_virtual_opaqueArea(void* self, intptr_t slot);
QPainterPath* QGraphicsWebView_virtualbase_opaqueArea(const void* self);
bool QGraphicsWebView_override_virtual_sceneEventFilter(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_sceneEventFilter(void* self, QGraphicsItem* watched, QEvent* event);
bool QGraphicsWebView_override_virtual_hoverEnterEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_hoverEnterEvent(void* self, QGraphicsSceneHoverEvent* event);
bool QGraphicsWebView_override_virtual_supportsExtension(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_supportsExtension(const void* self, int extension);
bool QGraphicsWebView_override_virtual_setExtension(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_setExtension(void* self, int extension, QVariant* variant);
bool QGraphicsWebView_override_virtual_extension(void* self, intptr_t slot);
QVariant* QGraphicsWebView_virtualbase_extension(const void* self, QVariant* variant);
const QMetaObject* QGraphicsWebView_staticMetaObject();
void QGraphicsWebView_delete(QGraphicsWebView* self);