qt/webkit/gen_qgraphicswebview.nim

proc fcQGraphicsWebView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_connectNotify".}
proc fQGraphicsWebView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsWebView_virtualbase_disconnectNotify".}
proc fcQGraphicsWebView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_disconnectNotify".}
proc fQGraphicsWebView_virtualbase_advance(self: pointer, phase: cint): void{.importc: "QGraphicsWebView_virtualbase_advance".}
proc fcQGraphicsWebView_override_virtual_advance(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_advance".}
proc fQGraphicsWebView_virtualbase_contains(self: pointer, point: pointer): bool{.importc: "QGraphicsWebView_virtualbase_contains".}
proc fcQGraphicsWebView_override_virtual_contains(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_contains".}
proc fQGraphicsWebView_virtualbase_collidesWithItem(self: pointer, other: pointer, mode: cint): bool{.importc: "QGraphicsWebView_virtualbase_collidesWithItem".}
proc fcQGraphicsWebView_override_virtual_collidesWithItem(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_collidesWithItem".}
proc fQGraphicsWebView_virtualbase_collidesWithPath(self: pointer, path: pointer, mode: cint): bool{.importc: "QGraphicsWebView_virtualbase_collidesWithPath".}
proc fcQGraphicsWebView_override_virtual_collidesWithPath(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_collidesWithPath".}
proc fQGraphicsWebView_virtualbase_isObscuredBy(self: pointer, item: pointer): bool{.importc: "QGraphicsWebView_virtualbase_isObscuredBy".}
proc fcQGraphicsWebView_override_virtual_isObscuredBy(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_isObscuredBy".}
proc fQGraphicsWebView_virtualbase_opaqueArea(self: pointer, ): pointer{.importc: "QGraphicsWebView_virtualbase_opaqueArea".}
proc fcQGraphicsWebView_override_virtual_opaqueArea(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_opaqueArea".}
proc fQGraphicsWebView_virtualbase_sceneEventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsWebView_virtualbase_sceneEventFilter".}
proc fcQGraphicsWebView_override_virtual_sceneEventFilter(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_sceneEventFilter".}
proc fQGraphicsWebView_virtualbase_hoverEnterEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_hoverEnterEvent".}
proc fcQGraphicsWebView_override_virtual_hoverEnterEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_hoverEnterEvent".}
proc fQGraphicsWebView_virtualbase_supportsExtension(self: pointer, extension: cint): bool{.importc: "QGraphicsWebView_virtualbase_supportsExtension".}
proc fcQGraphicsWebView_override_virtual_supportsExtension(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_supportsExtension".}
proc fQGraphicsWebView_virtualbase_setExtension(self: pointer, extension: cint, variant: pointer): void{.importc: "QGraphicsWebView_virtualbase_setExtension".}
proc fcQGraphicsWebView_override_virtual_setExtension(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_setExtension".}
proc fQGraphicsWebView_virtualbase_extension(self: pointer, variant: pointer): pointer{.importc: "QGraphicsWebView_virtualbase_extension".}
proc fcQGraphicsWebView_override_virtual_extension(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_extension".}
proc fcQGraphicsWebView_staticMetaObject(): pointer {.importc: "QGraphicsWebView_staticMetaObject".}
proc fcQGraphicsWebView_delete(self: pointer) {.importc: "QGraphicsWebView_delete".}


func init*(T: type QGraphicsWebView, h: ptr cQGraphicsWebView): QGraphicsWebView =
  T(h: h)
proc create*(T: type QGraphicsWebView, ): QGraphicsWebView =

  QGraphicsWebView.init(fcQGraphicsWebView_new())
proc create*(T: type QGraphicsWebView, parent: gen_qgraphicsitem.QGraphicsItem): QGraphicsWebView =

  QGraphicsWebView.init(fcQGraphicsWebView_new2(parent.h))
proc metaObject*(self: QGraphicsWebView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGraphicsWebView_metaObject(self.h))

proc metacast*(self: QGraphicsWebView, param1: cstring): pointer =

  fcQGraphicsWebView_metacast(self.h, param1)

proc metacall*(self: QGraphicsWebView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGraphicsWebView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGraphicsWebView, s: cstring): string =

  let v_ms = fcQGraphicsWebView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QGraphicsWebView, s: cstring): string =

  let v_ms = fcQGraphicsWebView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc page*(self: QGraphicsWebView, ): gen_qwebpage.QWebPage =

  gen_qwebpage.QWebPage(h: fcQGraphicsWebView_page(self.h))

proc setPage*(self: QGraphicsWebView, page: gen_qwebpage.QWebPage): void =

  fcQGraphicsWebView_setPage(self.h, page.h)

proc url*(self: QGraphicsWebView, ): gen_qurl.QUrl =

  gen_qurl.QUrl(h: fcQGraphicsWebView_url(self.h))

proc setUrl*(self: QGraphicsWebView, url: gen_qurl.QUrl): void =

  fcQGraphicsWebView_setUrl(self.h, url.h)

proc title*(self: QGraphicsWebView, ): string =

  let v_ms = fcQGraphicsWebView_title(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc icon*(self: QGraphicsWebView, ): gen_qicon.QIcon =

  gen_qicon.QIcon(h: fcQGraphicsWebView_icon(self.h))

proc zoomFactor*(self: QGraphicsWebView, ): float64 =

  fcQGraphicsWebView_zoomFactor(self.h)

proc setZoomFactor*(self: QGraphicsWebView, zoomFactor: float64): void =

  fcQGraphicsWebView_setZoomFactor(self.h, zoomFactor)

proc isModified*(self: QGraphicsWebView, ): bool =

  fcQGraphicsWebView_isModified(self.h)

proc load*(self: QGraphicsWebView, url: gen_qurl.QUrl): void =

  fcQGraphicsWebView_load(self.h, url.h)

proc loadWithRequest*(self: QGraphicsWebView, request: gen_qnetworkrequest.QNetworkRequest): void =

  fcQGraphicsWebView_loadWithRequest(self.h, request.h)

proc setHtml*(self: QGraphicsWebView, html: string): void =

  fcQGraphicsWebView_setHtml(self.h, struct_miqt_string(data: html, len: csize_t(len(html))))

proc setContent*(self: QGraphicsWebView, data: seq[byte]): void =

  fcQGraphicsWebView_setContent(self.h, struct_miqt_string(data: cast[cstring](if len(data) == 0: nil else: unsafeAddr data[0]), len: csize_t(len(data))))

proc history*(self: QGraphicsWebView, ): gen_qwebhistory.QWebHistory =

  gen_qwebhistory.QWebHistory(h: fcQGraphicsWebView_history(self.h))

proc settings*(self: QGraphicsWebView, ): gen_qwebsettings.QWebSettings =

  gen_qwebsettings.QWebSettings(h: fcQGraphicsWebView_settings(self.h))

proc pageAction*(self: QGraphicsWebView, action: gen_qwebpage.QWebPageWebAction): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQGraphicsWebView_pageAction(self.h, cint(action)))

proc triggerPageAction*(self: QGraphicsWebView, action: gen_qwebpage.QWebPageWebAction): void =

  fcQGraphicsWebView_triggerPageAction(self.h, cint(action))

proc findText*(self: QGraphicsWebView, subString: string): bool =

  fcQGraphicsWebView_findText(self.h, struct_miqt_string(data: subString, len: csize_t(len(subString))))

proc resizesToContents*(self: QGraphicsWebView, ): bool =

  fcQGraphicsWebView_resizesToContents(self.h)

proc setResizesToContents*(self: QGraphicsWebView, enabled: bool): void =

  fcQGraphicsWebView_setResizesToContents(self.h, enabled)

proc isTiledBackingStoreFrozen*(self: QGraphicsWebView, ): bool =

  fcQGraphicsWebView_isTiledBackingStoreFrozen(self.h)

proc setTiledBackingStoreFrozen*(self: QGraphicsWebView, frozen: bool): void =

  fcQGraphicsWebView_setTiledBackingStoreFrozen(self.h, frozen)

proc setGeometry*(self: QGraphicsWebView, rect: gen_qrect.QRectF): void =

  fcQGraphicsWebView_setGeometry(self.h, rect.h)

proc updateGeometry*(self: QGraphicsWebView, ): void =

  fcQGraphicsWebView_updateGeometry(self.h)

proc paint*(self: QGraphicsWebView, param1: gen_qpainter.QPainter, options: gen_qstyleoption.QStyleOptionGraphicsItem, widget: gen_qwidget.QWidget): void =

  fcQGraphicsWebView_paint(self.h, param1.h, options.h, widget.h)

proc itemChange*(self: QGraphicsWebView, change: gen_qgraphicsitem.QGraphicsItemGraphicsItemChange, value: gen_qvariant.QVariant): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQGraphicsWebView_itemChange(self.h, cint(change), value.h))

proc event*(self: QGraphicsWebView, param1: gen_qcoreevent.QEvent): bool =

  fcQGraphicsWebView_event(self.h, param1.h)

proc sizeHint*(self: QGraphicsWebView, which: gen_qnamespace.SizeHint, constraint: gen_qsize.QSizeF): gen_qsize.QSizeF =

  gen_qsize.QSizeF(h: fcQGraphicsWebView_sizeHint(self.h, cint(which), constraint.h))

proc inputMethodQuery*(self: QGraphicsWebView, query: gen_qnamespace.InputMethodQuery): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQGraphicsWebView_inputMethodQuery(self.h, cint(query)))

proc renderHints*(self: QGraphicsWebView, ): gen_qpainter.QPainterRenderHint =

  gen_qpainter.QPainterRenderHint(fcQGraphicsWebView_renderHints(self.h))

proc setRenderHints*(self: QGraphicsWebView, renderHints: gen_qpainter.QPainterRenderHint): void =

  fcQGraphicsWebView_setRenderHints(self.h, cint(renderHints))

proc setRenderHint*(self: QGraphicsWebView, param1: gen_qpainter.QPainterRenderHint): void =

  fcQGraphicsWebView_setRenderHint(self.h, cint(param1))

proc stop*(self: QGraphicsWebView, ): void =

  fcQGraphicsWebView_stop(self.h)

proc back*(self: QGraphicsWebView, ): void =

  fcQGraphicsWebView_back(self.h)

proc forward*(self: QGraphicsWebView, ): void =

  fcQGraphicsWebView_forward(self.h)

proc reload*(self: QGraphicsWebView, ): void =

  fcQGraphicsWebView_reload(self.h)

proc loadStarted*(self: QGraphicsWebView, ): void =

  fcQGraphicsWebView_loadStarted(self.h)

proc miqt_exec_callback_QGraphicsWebView_loadStarted(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onloadStarted*(self: QGraphicsWebView, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQGraphicsWebView_connect_loadStarted(self.h, cast[int](addr tmp[]))
proc loadFinished*(self: QGraphicsWebView, param1: bool): void =

  fcQGraphicsWebView_loadFinished(self.h, param1)

proc miqt_exec_callback_QGraphicsWebView_loadFinished(slot: int, param1: bool) {.exportc.} =
  type Cb = proc(param1: bool)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = param1


  nimfunc[](slotval1)

proc onloadFinished*(self: QGraphicsWebView, slot: proc(param1: bool)) =
  type Cb = proc(param1: bool)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQGraphicsWebView_connect_loadFinished(self.h, cast[int](addr tmp[]))
proc loadProgress*(self: QGraphicsWebView, progress: cint): void =

  fcQGraphicsWebView_loadProgress(self.h, progress)

proc miqt_exec_callback_QGraphicsWebView_loadProgress(slot: int, progress: cint) {.exportc.} =
  type Cb = proc(progress: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = progress


  nimfunc[](slotval1)

proc onloadProgress*(self: QGraphicsWebView, slot: proc(progress: cint)) =
  type Cb = proc(progress: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQGraphicsWebView_connect_loadProgress(self.h, cast[int](addr tmp[]))
proc urlChanged*(self: QGraphicsWebView, param1: gen_qurl.QUrl): void =

  fcQGraphicsWebView_urlChanged(self.h, param1.h)
